--- a/src/games/universeScale/universe.css
+++ b/src/games/universeScale/universe.css
@@ -16,7 +16,7 @@
   width: 100%;
 }
 
-.page-title {
+.universe-game-container .page-title {
   margin: 0 auto;
   text-align: center;
   font-size: 2rem;
